tests/ui/struct_literal_unknown_field.pea
struct Cool {
    pie: [i64],
}

fn main() {
    let value = Cool {pies: [1, 3]};
}
